Fix text alignment

--- a/server/views/viewer.css
+++ b/server/views/viewer.css
@@ -22,13 +22,6 @@ body {
 }
 
 .page-text {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
     z-index: 10;
 }
 
@@ -53,6 +46,7 @@ body {
     line-height: 1;
     white-space: pre;
     cursor: text;
+    transform-origin: 0% 0%;
 }
 
 .textLayer .highlight {
